// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Renders correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiContainer-root-7 WithStyles(ForwardRef(Container))-root-6 MuiContainer-maxWidthLg-13"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-9-60 MuiGrid-grid-md-8-87 MuiGrid-grid-lg-9-102"
        >
          <div
            class="MuiGrid-root-17 makeStyles-badgerIconContainer-15 MuiGrid-item-19"
          >
            <img
              alt="Badger Logo"
              class="makeStyles-badgerIcon-16"
              src="/assets/icons/badger_head.svg"
            />
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
              id="here-ref"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  Badger Price:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-158"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $346,976.00
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  Cycle: 
                  ...
                    
                  (latest 0h 0m)
                </span>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  Ethereum
                   TVL:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-161"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $4,337,200,000
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  My Assets:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-164"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $4,337,200.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-justify-content-xs-flex-end-36 MuiGrid-grid-xs-true-51"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-flex-end-36"
          >
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-166 MuiGrid-item-19"
            >
              <img
                alt="Discord Icon"
                class="makeStyles-socialIcon-165"
                src="/assets/icons/discord.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-166 makeStyles-twitter-167 MuiGrid-item-19"
            >
              <img
                alt="Twitter Icon"
                class="makeStyles-socialIcon-165"
                src="/assets/icons/twitter.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-166 makeStyles-telegram-169 MuiGrid-item-19"
            >
              <img
                alt="Telegram Icon"
                class="makeStyles-socialIcon-165"
                src="/assets/icons/telegram.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-170 MuiLink-underlineHover-172 MuiTypography-colorInherit-147"
                  href="https://docs.badger.com/"
                  rel="noopener"
                  target="_blank"
                >
                  WIKI
                </a>
              </span>
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-governance-168 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-170 MuiLink-underlineHover-172 MuiTypography-colorInherit-147"
                  href="/governance"
                  rel="noopener"
                >
                  GOVERNANCE
                </a>
              </span>
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-170 MuiLink-underlineHover-172 MuiTypography-colorInherit-147"
                  href="https://forum.badger.finance"
                  rel="noopener"
                  target="_blank"
                >
                  FORUM
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-actions-2"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-auto-50"
          >
            <div
              class="MuiTabs-root-178"
            >
              <div
                class="MuiTabs-scroller-183 MuiTabs-fixed-184"
                style="overflow: hidden;"
              >
                <div
                  class="MuiTabs-flexContainer-180"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193 MuiTab-selected-194"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-198"
                    >
                      VAULTS
                    </span>
                    <span
                      class="MuiTouchRipple-root-263"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-198"
                    >
                      DIGG
                    </span>
                    <span
                      class="MuiTouchRipple-root-263"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-198"
                    >
                      BOOST
                    </span>
                    <span
                      class="MuiTouchRipple-root-263"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-198"
                    >
                      IBBTC
                    </span>
                    <span
                      class="MuiTouchRipple-root-263"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-202 PrivateTabIndicator-colorSecondary-204 MuiTabs-indicator-188 makeStyles-indicator-177"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-206 MuiGrid-container-18 MuiGrid-justify-content-xs-flex-end-36"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-199 MuiButton-root-210 MuiButton-outlined-215 makeStyles-button-207 makeStyles-loadingRewardsButton-209 MuiButton-outlinedPrimary-216"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-211"
                  >
                    <div
                      class="makeStyles-loaderContainer-239 makeStyles-customSizing-241"
                    >
                      <div
                        class="MuiCircularProgress-root-242 MuiCircularProgress-colorPrimary-246 MuiCircularProgress-indeterminate-244"
                        role="progressbar"
                        style="width: 15px; height: 15px;"
                      >
                        <svg
                          class="MuiCircularProgress-svg-248"
                          viewBox="22 22 44 44"
                        >
                          <circle
                            class="MuiCircularProgress-circle-249 MuiCircularProgress-circleIndeterminate-251"
                            cx="44"
                            cy="44"
                            fill="none"
                            r="20.2"
                            stroke-width="3.6"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root-263"
                  />
                </button>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  aria-label="open network selector"
                  class="MuiButtonBase-root-199 MuiButton-root-210 MuiButton-outlined-215 makeStyles-networkButton-256 MuiButton-outlinedPrimary-216"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-211"
                  >
                    <img
                      alt="selected network icon"
                      class="makeStyles-selectedNetworkIcon-257"
                      src="/assets/icons/ethereum-network.svg"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root-263"
                  />
                </button>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-199 MuiButton-root-210 MuiButton-outlined-215 MuiButton-outlinedPrimary-216 MuiButton-disableElevation-221"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-211 makeStyles-walletButtonLabel-262"
                  >
                    0x1..a1a
                  </span>
                  <span
                    class="MuiTouchRipple-root-263"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders mobile version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-199 MuiIconButton-root-266 makeStyles-menuIcon-263"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-274"
            >
              <img
                alt="open menu"
                src="/assets/icons/mobile-drawer-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-291"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-264"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-265 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              aria-label="open network selector"
              class="MuiButtonBase-root-199 MuiButton-root-210 MuiButton-outlined-215 makeStyles-networkButton-256 MuiButton-outlinedPrimary-216"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-211"
              >
                <img
                  alt="selected network icon"
                  class="makeStyles-selectedNetworkIcon-257"
                  src="/assets/icons/ethereum-network.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-199 MuiButton-root-210 MuiButton-outlined-215 MuiButton-outlinedPrimary-216 MuiButton-disableElevation-221"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-211 makeStyles-walletButtonLabel-262"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-275"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Badger Price:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-284"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $346,976.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Cycle: 
            ...
              
            (latest 0h 0m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-287"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $4,337,200,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-290"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $4,337,200.00
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-275"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-178"
      >
        <div
          class="MuiTabs-scroller-183 MuiTabs-fixed-184"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-180"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193 MuiTab-selected-194 MuiTab-fullWidth-196"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193 MuiTab-fullWidth-196"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                DIGG
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193 MuiTab-fullWidth-196"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193 MuiTab-fullWidth-196"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-202 PrivateTabIndicator-colorSecondary-204 MuiTabs-indicator-188 makeStyles-indicator-177"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders tablet version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-199 MuiIconButton-root-266 makeStyles-menuIcon-263"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-274"
            >
              <img
                alt="open menu"
                src="/assets/icons/mobile-drawer-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-291"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-264"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-265 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              aria-label="open network selector"
              class="MuiButtonBase-root-199 MuiButton-root-210 MuiButton-outlined-215 makeStyles-networkButton-256 MuiButton-outlinedPrimary-216"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-211"
              >
                <img
                  alt="selected network icon"
                  class="makeStyles-selectedNetworkIcon-257"
                  src="/assets/icons/ethereum-network.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-199 MuiButton-root-210 MuiButton-outlined-215 MuiButton-outlinedPrimary-216 MuiButton-disableElevation-221"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-211 makeStyles-walletButtonLabel-262"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-275"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Badger Price:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-284"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $346,976.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Cycle: 
            ...
              
            (latest 0h 0m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-287"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $4,337,200,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-290"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $4,337,200.00
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-275"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-178"
      >
        <div
          class="MuiTabs-scroller-183 MuiTabs-fixed-184"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-180"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193 MuiTab-selected-194"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                DIGG
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-199 MuiTab-root-189 makeStyles-tab-176 MuiTab-textColorSecondary-193"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-198"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-202 PrivateTabIndicator-colorSecondary-204 MuiTabs-indicator-188 makeStyles-indicator-177"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
